@@ -28,6 +28,8 @@ Ver.5.3 (in development)
 - [BUG FIX] Fix detection of params.php file.
 - [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
 - [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
+- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
+  is "enclosure post".
 
 Ver.5.2 (August 24, 2015)
 - Record Copying is supported for single record, and also with associated records for PDO.
